0.9.0/_sources/gallery/scale_bar.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/scale_bar.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_scale_bar.py:


Scale bar
=========

Display a 3D volume and the scale bar

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-43



.. image-sg:: /gallery/images/sphx_glr_scale_bar_001.png
   :alt: scale bar
   :srcset: /gallery/images/sphx_glr_scale_bar_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),
    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:49: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),






|

.. code-block:: Python

    from skimage import data

    import napari

    cells = data.cells3d()

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        cells,
        name=('membrane', 'nuclei'),
        channel_axis=1,
        scale=(0.29, 0.26, 0.26),
        units='um',
    )
    viewer.canvas.overlays.scale_bar.visible = True

    # Text options
    viewer.canvas.overlays.scale_bar.length = 23  # length, in units, of the scale bar
    viewer.canvas.overlays.scale_bar.font_size = 20  # default is 10

    # Text color
    viewer.canvas.overlays.scale_bar.colored = True  # default value is False
    viewer.canvas.overlays.scale_bar.color = 'yellow'  # default value is magenta: (1,0,1,1)

    # Background box
    viewer.canvas.overlays.scale_bar.box = True  # add background box, default is False
    viewer.canvas.overlays.scale_bar.box_color = (0, 1, 1, 0.2)  # cyan with alpha=0.2

    # Scale bar position
    viewer.canvas.overlays.scale_bar.position = 'bottom_left'  # default is 'bottom_right'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_scale_bar.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: scale_bar.ipynb <scale_bar.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: scale_bar.py <scale_bar.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: scale_bar.zip <scale_bar.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
